@@ -13,6 +13,7 @@ import org.cce.backend.mapper.DocumentMapper;
 import org.cce.backend.mapper.UserDocMapper;
 import org.cce.backend.mapper.UserMapper;
 import org.cce.backend.repository.DocRepository;
+import org.cce.backend.repository.UserDocRepository;
 import org.cce.backend.repository.UserRepository;
 import org.cce.backend.security.SecurityUtil;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -43,6 +44,10 @@ public class DocServiceImpl implements DocService {
     @Autowired
     UserDocMapper userDocMapper;
 
+    @Autowired
+    UserDocRepository userDocRepository;
+
+
     private User getCurrentUser() {
         String username = SecurityUtil.getCurrentUsername();
         User user = userRepository.findByUsername(username)
@@ -50,48 +55,30 @@ public class DocServiceImpl implements DocService {
         return user;
     }
 
+    @Transactional
     @Override
     public DocumentDTO createDoc(DocTitleDTO docTitleDTO) {
-        return null;
-//        String title = docTitleDTO.getTitle();
-//        userMapper.toDTO(getCurrentUser());
-//        Doc doc = Doc.builder()
-//                .owner(getCurrentUser())
-//                .title(title)
-//                .content("")
-//                .sharedWith(new ArrayList<>())
-//                .build();
-//
-//        Doc savedDoc = docRepository.save(doc);
-//        User user = getCurrentUser();
-//        List<AccessDoc> accessDoc = user.getAccessDoc();
-//        accessDoc.add(AccessDoc.builder()
-//                .doc(savedDoc)
-//                .permission(Permission.OWNER)
-//                .build());
-//        userRepository.save(user);
-//        return documentMapper.toDto(savedDoc);
+        String title = docTitleDTO.getTitle();
+        User user = getCurrentUser();
+        Doc doc = Doc.builder()
+                .owner(user)
+                .title(title)
+                .content("")
+                .sharedWith(new ArrayList<>())
+                .build();
+
+        Doc savedDoc = docRepository.save(doc);
+        userDocRepository.save(
+                UserDoc.builder().doc(savedDoc).user(user).permission(Permission.OWNER).build());
+        userRepository.save(user);
+        return documentMapper.toDto(savedDoc);
     }
 
     @Transactional
     @Override
     public Long deleteDoc(Long id) {
         Doc doc = docRepository.findById(id).orElseThrow(() -> new RuntimeException("Document not found"));
-//        for (User user : userRepository.findAll()) {
-//            List<AccessDoc> accessDoc = user.getAccessDoc();
-//            accessDoc.removeIf(accessDoc1 -> accessDoc1.getDoc().getId().equals(id));
-//            userRepository.save(user);
-//        }
-//        for (UserDoc userDoc : doc.getSharedWith()){
-//            userRepository.findByUsername(userDoc.getUser().getUsername()).stream()
-//                    .findFirst()
-//                    .ifPresent(user -> {
-//                        List<AccessDoc> accessDoc = user.getAccessDoc();
-//                        accessDoc.removeIf(accessDoc1 -> accessDoc1.getDoc().getId().equals(id));
-//                        userRepository.save(user);
-//                    });
-//        }
-//        docRepository.deleteById(id);
+        docRepository.deleteById(id);
         return id;
     }
 
@@ -114,7 +101,7 @@ public class DocServiceImpl implements DocService {
                 .orElse(null);
 
         if (user != null) {
-            return userDocMapper.toDto(user);
+            return userDocMapper.userDocToUserDocDTO(user);
         }
 
         List<User> users = userRepository.findByUsername(userDocDTO.getUsername());
@@ -123,12 +110,9 @@ public class DocServiceImpl implements DocService {
         }
         User userFound = users.get(0);
 
-        UserDoc sharedUser = UserDoc.builder()
-                .user(userFound)
-                .permission(userDocDTO.getPermission())
-                .build();
-        doc.getSharedWith().add(sharedUser);
-        docRepository.save(doc);
+        UserDoc userDoc = UserDoc.builder().user(userFound)
+                .doc(doc).permission(userDocDTO.getPermission()).build();
+        userDocRepository.save(userDoc);
         return userDocDTO;
     }
 
@@ -137,7 +121,7 @@ public class DocServiceImpl implements DocService {
         Doc doc = docRepository.findById(id).orElseThrow(() -> new RuntimeException("Document not found"));
 
         return doc.getSharedWith().stream()
-                .map(userDoc -> userDocMapper.toDto(userDoc))
+                .map(userDoc -> userDocMapper.userDocToUserDocDTO(userDoc))
                 .collect(Collectors.toList());
     }
 
@@ -186,19 +170,21 @@ public class DocServiceImpl implements DocService {
 
     @Override
     public List<DocumentDTO> getAllDocs() {
-//        String userId = SecurityUtil.getCurrentUserId();
-//        ArrayList<DocumentDTO> docs = new ArrayList<>();
-//
-//        if (userId == null) {
-//            throw new RuntimeException("User not found");
-//        }
-//        long prev = System.currentTimeMillis();
-//        var res = docRepository.findByOwnerId(userId).stream()
-//                .map(doc -> documentMapper.toDto(doc))
-//                .collect(Collectors.toList());
-//       long now = System.currentTimeMillis();
-//        System.out.println((now-prev));
-        return null;
+        User user = getCurrentUser();
+        System.out.println("New query");
+        List<Doc>docs = userDocRepository.getDocsByUser_Username(user.getUsername());
+        docs.stream().forEach(
+                        doc->{
+                            List<UserDoc> sharedWith = doc.getSharedWith();
+                            sharedWith = sharedWith.stream().filter(
+                                    item->!item.getPermission().equals(Permission.OWNER)
+                            ).toList();
+                            doc.setSharedWith(sharedWith);
+                        }
+                );
+
+        return docs.stream().map(doc -> documentMapper.toDto(doc))
+                .collect(Collectors.toList());
     }
 
     private void validatePermission(UserDocDTO userDocDTO) {
